--- a/frontend/src/components/ReviewsFolder/CreateReviewForSpot.css
+++ b/frontend/src/components/ReviewsFolder/CreateReviewForSpot.css
@@ -61,7 +61,7 @@
     background-color: rgb(252, 89, 119);
 }
 
-input[type='button']:disabled, button:disabled
+input:disabled, button:disabled
 {
     color:rgb(172, 172, 172);
     text-decoration:underline;
@@ -73,7 +73,6 @@ input[type='button']:disabled, button:disabled
     display: flex;
     color: red;
     font-weight: bold;
-    margin-left: 6%;
 }
 
 .review-error-map {
